--- a/packages/stateeditor/panel/template/tree.html
+++ b/packages/stateeditor/panel/template/tree.html
@@ -6,8 +6,8 @@
 
 
     <ul class="dropdown-menu" role="menu">
-        <li><a href="#" ng-click="slide_on(currentItem)">删除</a></li>
-        <li><a href="#">另一个功能</a></li>
+        <li><a href="#" ng-click="slide_add(currentItem)">添加</a></li>
+        <li><a href="#" ng-click="slide_delete(currentItem)">删除</a></li>
 
         <li class="divider"></li>
         <li><a href="#">分离的链接</a></li>
